# controller/product.controller.go
@@ -1,6 +1,14 @@
 package controller
 
-import "github.com/gin-gonic/gin"
+import (
+	"net/http"
+	"os"
+	"strings"
+
+	"github.com/gin-gonic/gin"
+	"github.com/ivohutasoit/alira-commerce/model"
+	"github.com/ivohutasoit/alira-commerce/service"
+)
 
 type Product struct{}
 
@@ -10,12 +18,48 @@ type Product struct{}
 // @Tags Product
 // @Accept json
 // @Produce json
+// @Param store body model.StoreProduct true "Store product"
 // @Param Authorization header string true "Bearer [accessing token]"
 // @Success 200 {string} string "{"code": 200, "status": "OK", "message": "Success", "data": "data"}"
 // @Failure 400 {string} string "{"code": 400, "status": "Bad request", "error": "Error"}"
 // @Router /product [post]
 func (ctrl *Product) CreateHandler(c *gin.Context) {
+	api := strings.Contains(c.Request.URL.Path, os.Getenv("URL_API"))
 
+	var req model.StoreProduct
+	if api {
+		if err := c.ShouldBindJSON(&req); err != nil {
+			c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
+				"code":   http.StatusBadRequest,
+				"status": http.StatusText(http.StatusBadRequest),
+				"error":  err.Error(),
+			})
+			return
+		}
+	}
+
+	ps := &service.Product{}
+	data, err := ps.Create(c.GetString("user_id"), req)
+	if err != nil {
+		if api {
+			c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
+				"code":   http.StatusBadRequest,
+				"status": http.StatusText(http.StatusBadRequest),
+				"error":  err.Error(),
+			})
+			return
+		}
+	}
+
+	if api {
+		c.JSON(http.StatusCreated, gin.H{
+			"code":    http.StatusCreated,
+			"status":  http.StatusText(http.StatusCreated),
+			"message": data["message"].(string),
+			"data":    data["product"].(*model.StoreProduct),
+		})
+		return
+	}
 }
 
 // DetailHandler godoc
